--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,19 @@ theme:
       accent: lime
 
 plugins:
-  - glightbox
+  - glightbox:
+      touchNavigation: true
+      loop: false
+      effect: zoom
+      slide_effect: slide
+      width: 80%
+      height: auto
+      zoomable: true
+      draggable: true
+      skip_classes:
+        - custom-skip-class-name
+      auto_caption: false
+      caption_position: bottom
 
 markdown_extensions:
   - pymdownx.highlight:
